Added baner for admins and managers

--- a/Views/Shared/_ParentPage.cshtml
+++ b/Views/Shared/_ParentPage.cshtml
@@ -9,21 +9,23 @@
 <body>
     <header>
         <div class="left-part-nav">
-                <ul>
-                    <a asp-action="Index" asp-controller="Home"><li id="MailButton">HeyHotel</li></a>
-                    <a asp-action="Privacy" asp-controller="Home"><li>About</li></a>
-                    <li>Help</li>
-                </ul>
+            <ul>
+                <li id="MailButton"><a asp-action="Index" asp-controller="Home">HeyHotel</a></li>
+                <li><a asp-action="Privacy" asp-controller="Home">About</a></li>
+                <li>Help</li>
+            </ul>
         </div>
     </header>
 
     <div class="conteiner-for-main">
         <main role="main" class="pb-3">
             @RenderBody()
+
+
         </main>
 
     </div>
-    
+
 
 
     <footer class="border-top footer text-muted">
@@ -32,6 +34,19 @@
         </div>
     </footer>
 
+    @if (User.IsInRole("admin"))
+    {
+        <a asp-controller="Admin" asp-action="Index"><div class="AdminLink">Admin panel</div></a>
+    }
+
+    @if (User.IsInRole("admin") || User.IsInRole("manager"))
+    {
+        <a asp-controller="Manager" asp-action="Index"><div class="ManagerLink">Manager panel</div></a>
+    }
+
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
