--- a/Views/Admin/UserDetail.cshtml
+++ b/Views/Admin/UserDetail.cshtml
@@ -53,7 +53,7 @@
     </tr>
     <tr>
         <td>
-            Access Failed Count
+            Phone number
         </td>
         <td>
             @Model.Phone
