--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -1,3 +1,3 @@
 ﻿<p><a asp-action="Users" asp-controller="Admin">Users list</a></p>
 <p><a asp-action="CreateHotel" asp-controller="Admin">Create Hotel</a></p>
-<p><a asp-action="CreateRoom" asp-controller="Admin">Create Hotel</a></p>
+<p><a asp-action="CreateRoom" asp-controller="Admin">Create Room</a></p>
