Added Description (Property) to Room

--- a/Views/Admin/CreateRoom.cshtml
+++ b/Views/Admin/CreateRoom.cshtml
@@ -21,5 +21,9 @@
         <label asp-for="Floor">Floor:</label>
         <input asp-for="Floor" />
     </div>
+    <div>
+        <label asp-for="Description">Description:</label>
+        <input asp-for="Description" type="text"/>
+    </div>
     <button type="submit">Create room</button>
 </form>
