main page pattern

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,11 +2,18 @@
     ViewData["Title"] = "Home Page";
 }
 
-@section Styles {
-    <link href="/css/mainpage/HomePage.css" rel="stylesheet" type="text/css" />
-}
+<div class="orderNowButton">ORDER ROOM NOW!</div>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="firstBenefitDiv">
+    <div class="benefitOneTitle_first">Easiest order</div>
+    <div class="benefitOneTitle_second">Kindest personnel</div>
+
+    <div class="benefitOneDescript">
+        You can order room on web-site, or on reception in Hotel!
+        Our manager will  allways be happy to answer yor questions!
+        <i> Also there`s system of discount</i> 😏
+    </div>
+
+
 </div>
+     
