--- a/Views/Shared/_ParentPage.cshtml
+++ b/Views/Shared/_ParentPage.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HeyHotel</title>
     <link rel="stylesheet" href="~/css/mainpage/mainpage.css" />
+    <link rel="stylesheet" href="~/css/mainpage/HomePage.css" />
 </head>
 <body>
     <header>
