--- a/wwwroot/css/mainpage/HomePage.css
+++ b/wwwroot/css/mainpage/HomePage.css
@@ -1,5 +1,75 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿.orderNowButton {
+    position: absolute;
+    left: 40%;
+    
+    border: 1px solid #E5BF78;
+    text-align: center;
+    font-size: 24px;
+    padding: 8px 20px;
+    background-color: #C9A76A;
+    box-shadow: 3px 3px 5px black;
+    transition: all 0.3s ease;
+}
+
+.orderNowButton:hover {
+    box-shadow: 4px 4px 9px black;
+    background-color: #B99A61;
+    cursor: pointer;
+}
+/* First Benefit */
+.firstBenefitDiv {
+    left: 20px;
+    top: 15%;
+    height: 400px;
+    width: 600px;
+    border: 1px solid #C5B895;
+    position: absolute;
+    background-image: url("../../photo/benefits/kindManager.jpg");
+}
+
+
+.benefitOneTitle_first {
+    position: absolute;
+    font-size: 24px;
+    left:30%;
+    top:2%;
+    padding: 5px;
+    background-color: #3A1A11;
+    color: #F0EAD6;
+    border: 1px solid black;
+}
+
+.benefitOneTitle_second {
+    position: absolute;
+    font-size: 24px;
+    left: 10%;
+    top: 15%;
+    padding: 5px;
+    background-color: #3A1A11;
+    color: #F0EAD6;
+    border: 1px solid black;
+}
+
+.benefitOneDescript {
+    position: absolute;
+    width: 40%;
+    left: 0;
+    background: linear-gradient(to bottom right, #7A3A01, #C6A67A);
+    padding-left: 5px;
+    bottom: 5%;
+    font-family: system-ui;
+    font-size: 22px;
+    opacity: 0.9;
+}
+
+.firstBenefitComent {
+    width: 30%;
+    font-size: 18px;
+    background: linear-gradient(to bottom right, #F0EAD6, #FDF5E6);
+}
+/*-----------------*/
+.contentTrach {
+    width: 100%;
+    height: 500px;
+    border: 1px solid black;
 }
