--- a/wwwroot/css/mainpage/mainpage.css
+++ b/wwwroot/css/mainpage/mainpage.css
@@ -20,10 +20,14 @@ header {
     width: 100%;
     height: 80px;
     display: flex;
+    left: 0px;
+    top: 0px;
+    z-index: 2;
     justify-content: space-between;
     border-bottom: 2px solid #662E1C;
-    border-start-end-radius: 10px;
-    border-start-start-radius: 10px;
+    /*border-start-end-radius: 10px;
+    border-start-start-radius: 10px;*/
+    position: sticky;
 }
 
 /* left part of header */
