Create order views created

--- a/Views/Admin/UserDetail.cshtml
+++ b/Views/Admin/UserDetail.cshtml
@@ -56,7 +56,7 @@
             Phone number
         </td>
         <td>
-            @Model.Phone
+            @Model.PhoneNumber
         </td>
     </tr>
 
