--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="orderNowButton">ORDER ROOM NOW!</div>
+<a asp-action="ChooseHotel" asp-controller="Order"><div class="orderNowButton">ORDER ROOM NOW!</div></a>
 
 <div class="firstBenefitDiv">
     <div class="benefitOneTitle_first">Easiest order</div>
