Create order func added

--- a/Views/Order/ConfirmOrder.cshtml
+++ b/Views/Order/ConfirmOrder.cshtml
@@ -13,5 +13,5 @@
     <input type="hidden" asp-for="NumOfNight" value="@Model.NumOfNight" />
     <input type="hidden" asp-for="RoomId" value="@Model.RoomId" />
     <input type="hidden" asp-for="UserId" value="@Model.UserId" />
-    <button type="submit"></button>
+    <button type="submit">Confirm</button>
 </form>
