Order list for manager added

--- a/Views/Manager/Index.cshtml
+++ b/Views/Manager/Index.cshtml
@@ -1,1 +1,2 @@
-﻿<div><a asp-action="HotelList" asp-controller="Manager"> Hotel List</a></div>
+﻿<a asp-action="HotelList" asp-controller="Manager"><div> Hotel List</div></a>
+<a asp-action="OrdersList" asp-controller="Manager"><div>Orders List</div></a>
