Added forgoten /a tag

--- a/Views/Manager/OrdersList.cshtml
+++ b/Views/Manager/OrdersList.cshtml
@@ -22,9 +22,9 @@
                     <td>@order.Sum</td>
                     <td>@order.IsPayed</td>
                     <td>@order.IsClosed</td>
-                    <td><a asp-action="EditOrder" asp-controller="Manager">Edit </a></td>
+                    <td><a asp-action="EditOrder" asp-controller="Manager">Edit</a></td>
                     <td><a asp-action="CloseOrder" asp-controller="Manager">Close</a></td>
-                    <td><a asp-action="DeleteOrder" asp-controller="Manager">Delete</td>
+                    <td><a asp-action="DeleteOrder" asp-controller="Manager">Delete</a></td>
                 </tr>
             }
 
