--- a/Views/Shared/_ParentPage.cshtml
+++ b/Views/Shared/_ParentPage.cshtml
@@ -6,6 +6,7 @@
     <title>HeyHotel</title>
     <link rel="stylesheet" href="~/css/mainpage/mainpage.css" />
     <link rel="stylesheet" href="~/css/mainpage/HomePage.css" />
+    <link rel="stylesheet" href="~/css/mainpage/OrdersStyle.css" />
 </head>
 <body>
     <header>
