style for chosing hotel added

--- a/Views/Order/ChooseHotel.cshtml
+++ b/Views/Order/ChooseHotel.cshtml
@@ -1,18 +1,19 @@
 ﻿@model IEnumerable<HeyHotel.Models.Hotel>
 
 <div class="flex">
-@foreach (var hotel in Model)
-{
-    <a asp-action="ChooseRoom" asp-controller="Order" asp-route-id="@hotel.Id">
-        <div class="HotelChoseDiv">
-            <div class="HotelLocation">@hotel.Location</div>
-            <div class="HotelImageDiv">
-
+@{
+    foreach (var hotel in Model)
+    {
+        string imgWay = hotel.Id + ".jpg";
+        <a asp-action="ChooseRoom" asp-controller="Order" asp-route-id="@hotel.Id">
+            <div class="HotelChoseDiv">
+                <div class="HotelLocation">@hotel.Location</div>
+                <div style=" background-image: url(../../photo/hotels/@imgWay) " class="HotelImageDiv">  
+                </div>
+                <div class="ChoseHotelFreeRoom">Free room:  @hotel.Rooms.Where(el => !el.IsUsing).ToList().Count </div>
             </div>
 
-            <div class="ChoseHotelFreeRoom">Free room:  @hotel.Rooms.Where(el => !el.IsUsing).ToList().Count </div>
-        </div>
-        
-    </a>
+        </a>
+    }
 }
 </div>
