--- a/wwwroot/css/mainpage/OrdersStyle.css
+++ b/wwwroot/css/mainpage/OrdersStyle.css
@@ -37,6 +37,7 @@
     height: 65%;
     background-position-y: -15px;
     transition: all 0.4s;
+    background-repeat: no-repeat;
 }
 
 .HotelChoseDiv:hover .HotelImageDiv {
@@ -44,4 +45,98 @@
     top: 15%;
     width: 96%;
     height: 77%;
+    background-repeat: no-repeat;
+}
+
+/*  Choose room  */
+
+.RoomChoseDiv {
+    box-shadow: 9px -9px 9px -6px rgba(34, 60, 80, 0.24);
+    overflow: hidden;
+    background-color: blanchedalmond;
+    margin: 10px;
+    width: 250px;
+    height: 350px;
+    position: relative;
+}
+
+.ChoseHead {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width:100%;
+    height: 15%;
+}
+
+.RoomNumbDiv {
+    font-size: 18px;
+    font-family: Trebuchet MS;
+    background-color: #FFF5E5;
+    color: #663D00;
+    width: 30%;
+    height: 50%;
+    border: 5px solid #985B00;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 2%;
+    margin-top: 2%;
+    border-radius: 20px;
+}
+
+.RoomDescription {
+    position: absolute;
+    left: 3%;
+    opacity: 0;
+    width: 94%;
+    top: 20%;
+    min-height: 20%;
+    height: auto;
+    border: 1px solid black;
+    font-size: 14px;
+    transition: all 0.5s;
+}
+
+.RoomChoseDiv:hover .RoomDescription {
+    transform: translateY(40%);
+    opacity: 1;
+}
+
+.RoomParameters {
+    width: 100%;
+    height: auto;
+    padding-left: 4%;
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+.RoomParameter {
+    color: #2C1D00;
+    background-color: #FFF2DE;
+    font-family: Cordia New;
+    padding: 1%;
+    width: fit-content;
+    margin-bottom: 1%;
+    border: 1px solid #986500;
+    box-shadow: 10px 5px 5px #3F2A00;
+}
+
+.ChoseRoomPhoto {
+    position: absolute;
+    background-size: 100%;
+    top: 20%;
+    left: 2%;
+    width: 96%;
+    height: 55%;
+    background-repeat: no-repeat;
+    opacity: 1;
+    transition: all 0.5s;
+}
+
+.RoomChoseDiv:hover .ChoseRoomPhoto {
+    opacity: 0.2;
+    width: 98%;
+    left: 1%;
 }
