--- a/wwwroot/css/mainpage/OrdersStyle.css
+++ b/wwwroot/css/mainpage/OrdersStyle.css
@@ -140,3 +140,60 @@
     width: 98%;
     left: 1%;
 }
+
+/* Create order styles */
+
+.CreateOrderDetail {
+    position: relative;
+    left: 0;
+    text-align: center;
+    width: fit-content;
+    padding: 5px;
+    border-start-end-radius: 10px;
+    background: linear-gradient(45deg, #F6E6BA, #8C690A);
+    opacity: 0.8;
+    font-size: 28px;
+}
+
+.CreateOrderTable {
+    width: 80%;
+    position: relative;
+    left: 10%;
+    font-size: 26px;
+    border: 10px solid;
+    border-image-slice: 1;
+    border-width: 5px;
+    border-image-source: linear-gradient(to right, #735A14, #AF8B28);
+}
+
+.CreateOrderTable tr {
+    font-family: Arial;
+    width: 100%;
+    background: linear-gradient(45deg, #EBDBAE, #EBCE7F);
+    -webkit-box-shadow: 0px -5px 5px -5px rgba(34, 60, 80, 0.6) inset;
+    -moz-box-shadow: 0px -5px 5px -5px rgba(34, 60, 80, 0.6) inset;
+    box-shadow: 0px -5px 5px -5px rgba(34, 60, 80, 0.6) inset;
+}
+
+
+.CreateOrderTable tr td {
+    width: 50%;
+    padding: 10px;
+    text-align: center;
+}
+
+.CreateOrderRNDiv {
+    font-size: 24px;
+    font-family: Trebuchet MS;
+    background: linear-gradient(45deg,  )
+    color: #663D00;
+    width: 10%;
+    height: 50%;
+    border: 5px solid #985B00;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 2%;
+    margin-top: 2%;
+    border-radius: 20px;
+}
