--- a/wwwroot/css/mainpage/OrdersStyle.css
+++ b/wwwroot/css/mainpage/OrdersStyle.css
@@ -4,6 +4,11 @@
     display: flex;
 }
 
+a {
+    text-decoration: none;
+    color: black;
+}
+
 .HotelChoseDiv {
     background-color: blanchedalmond;
     margin: 10px;
@@ -294,3 +299,24 @@ input[type="number"] {
     background-color: #D5C48C;
     cursor: pointer;
 } 
+
+/* Confirm Button */
+
+.BackButton {
+    padding: 7px 25px;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 18px;
+    width: fit-content;
+    border: 4px solid #916F00;
+    border-radius: 20px;
+    color: black;
+    background: #F0EAD6;
+    position: relative;
+    transition: all 0.3s;
+}
+
+.BackButton:hover {
+    background: #FDF5E6;
+    border: 4px solid #7A5E00;
+}
+
