Added general style file

--- a/Views/Manager/Index.cshtml
+++ b/Views/Manager/Index.cshtml
@@ -1,2 +1,2 @@
-﻿<a asp-action="HotelList" asp-controller="Manager"><div> Hotel List</div></a>
-<a asp-action="OrdersList" asp-controller="Manager"><div>Orders List</div></a>
+﻿<a asp-action="HotelList" asp-controller="Manager"><div class="LinkDiv"> Hotel List</div></a>
+<a asp-action="OrdersList" asp-controller="Manager"><div class="LinkDiv">Orders List</div></a>
