--- a/Views/Shared/_ParentPage.cshtml
+++ b/Views/Shared/_ParentPage.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/css/mainpage/mainpage.css" />
     <link rel="stylesheet" href="~/css/mainpage/HomePage.css" />
     <link rel="stylesheet" href="~/css/mainpage/OrdersStyle.css" />
+    <link rel="stylesheet" href="~/css/mainpage/GeneralStyle.css" />
 </head>
 <body>
     <header>
