--- a/wwwroot/css/mainpage/OrdersStyle.css
+++ b/wwwroot/css/mainpage/OrdersStyle.css
@@ -320,3 +320,28 @@ input[type="number"] {
     border: 4px solid #7A5E00;
 }
 
+.ConfirmDataDiv {
+    width: 100%;
+    text-align: left;
+    color: #502516;
+    font-size: 32px;
+}
+
+.ConfirmOrdButton {
+    padding: 7px 25px;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 18px;
+    width: fit-content;
+    border: 4px solid #916F00;
+    border-radius: 20px;
+    color: black;
+    background: #F0EAD6;
+    position: relative;
+    transition: all 0.3s;
+}
+
+.ConfirmOrdButton:hover {
+    cursor: pointer;
+    background: #FDF5E6;
+    border: 4px solid #7A5E00;
+}
