Edit Button in ListOrder style added

--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -1,3 +1,3 @@
-﻿<p><a asp-action="Users" asp-controller="Admin">Users list</a></p>
-<p><a asp-action="CreateHotel" asp-controller="Admin">Create Hotel</a></p>
-<p><a asp-action="CreateRoom" asp-controller="Admin">Create Room</a></p>
+﻿<a asp-action="Users" asp-controller="Admin"><div class="LinkDiv">Users list</div></a>
+<a asp-action="CreateHotel" asp-controller="Admin"><div class="LinkDiv">Create Hotel</div></a>
+<a asp-action="CreateRoom" asp-controller="Admin"><div class="LinkDiv">Create Room</div></a>
