--- a/wwwroot/css/mainpage/GeneralStyle.css
+++ b/wwwroot/css/mainpage/GeneralStyle.css
@@ -19,3 +19,44 @@
     border-start-start-radius: 15px;
     border-radius: 15px;
 }
+
+.ItemListTable {
+    font-size: 18px;
+    width: 95%;
+}
+
+.ItemListTable tr:first-child td {
+    font-size: 22px;
+    background: #CCBF9A;
+    font-family: cursive;
+}
+
+.ItemListTable tr td {
+    border: 1px solid black;
+    padding: 5px;
+    background: #FDF5E6;
+    text-align: center;
+    font-family: Arial;
+    color: #150F00;
+}
+
+.ItemListTable tr .EditButton {
+    color: black;
+    border: 1px solid #B4A888;
+    border-radius: 10px;
+    background: #FDB320;
+    padding: 5px 10px;
+}
+
+.ItemListTable tr .EditButton:hover {
+    color: blue;
+    background: #FDD720;
+}
+
+.ItemListTable tr .CloseButton {
+    color: black;
+    border: 1px solid #B4A888;
+    border-radius: 10px;
+    background: #FDB320;
+    padding: 5px 10px;
+}
