--- a/Views/Manager/OrdersList.cshtml
+++ b/Views/Manager/OrdersList.cshtml
@@ -22,16 +22,16 @@
                     <td>@order.Sum</td>
                     <td>@order.IsPayed</td>
                     <td>@order.IsClosed</td>
-                    <td class="EditButton"><a  asp-action="EditOrder" asp-controller="Order" asp-route-OrderId="@order.Id">Edit</a></td>
+                    <td class="ActionButton"><a  asp-action="EditOrder" asp-controller="Order" asp-route-OrderId="@order.Id">Edit</a></td>
                     @if (order.IsClosed)
                     {
-                        <td>Close</td>
+                        <td class="DisabledButton">Close</td>
                     }
                     else
                     {
-                        <td><a asp-action="CloseOrder" asp-controller="Order" asp-route-OrderId="@order.Id">Close</a></td>
+                        <td class="ActionButton"><a asp-action="CloseOrder" asp-controller="Order" asp-route-OrderId="@order.Id">Close</a></td>
                     }
-                    <td><a asp-action="DeleteOrder" asp-controller="Order" asp-route-OrderId="@order.Id">Delete</a></td>
+                    <td class="ActionButton"><a asp-action="DeleteOrder" asp-controller="Order" asp-route-OrderId="@order.Id">Delete</a></td>
                 </tr>
             }
 
