--- a/Views/Admin/Users.cshtml
+++ b/Views/Admin/Users.cshtml
@@ -1,16 +1,19 @@
 ﻿@model IEnumerable<HeyHotel.Models.User>
 
-<table>
-   
-    @foreach(var user in Model)
-     {
+<table class="ItemListTable">
+
+    <tr>
+        <td>UserName</td>
+    </tr>
+    @foreach (var user in Model)
+    {
         <tr>
             <td>@user.UserName</td>
-            <td><a asp-action="ChangeRoles" asp-controller="Admin" asp-route-id="@user.Id">Change Roles</a></td>
-            <td><a asp-action="EditUser" asp-controller="Admin" asp-route-Id="@user.Id">Edit</a></td>
-            <td><a asp-action="UserDetail" asp-controller="Admin" asp-route-Id="@user.Id">Detail</a></td>
-            <td><a asp-action="DeleteUser" asp-controller="Admin" asp-route-Id="@user.Id">Delete</a></td>
+            <td class="ActionButton"><a asp-action="ChangeRoles" asp-controller="Admin" asp-route-id="@user.Id">Change Roles</a></td>
+            <td class="ActionButton"><a asp-action="EditUser" asp-controller="Admin" asp-route-Id="@user.Id">Edit</a></td>
+            <td class="ActionButton"><a asp-action="UserDetail" asp-controller="Admin" asp-route-Id="@user.Id">Detail</a></td>
+            <td class="ActionButton"><a asp-action="DeleteUser" asp-controller="Admin" asp-route-Id="@user.Id">Delete</a></td>
         </tr>
-      } 
+    }
 
 </table>
