--- a/wwwroot/css/mainpage/GeneralStyle.css
+++ b/wwwroot/css/mainpage/GeneralStyle.css
@@ -32,7 +32,7 @@
 }
 
 .ItemListTable tr td {
-    border: 1px solid black;
+    /*border: 1px solid black;*/
     padding: 5px;
     background: #FDF5E6;
     text-align: center;
@@ -40,23 +40,35 @@
     color: #150F00;
 }
 
-.ItemListTable tr .EditButton {
-    color: black;
-    border: 1px solid #B4A888;
-    border-radius: 10px;
-    background: #FDB320;
-    padding: 5px 10px;
+.ItemListTable td:nth-child(even) {
+    background: #F8F8F8;
+} 
+
+.ItemListTable tr .ActionButton {
+    border: none;
+    border-radius: 15px;
+    padding: 10px;
+    box-shadow: 0 3px 0 0 #b7c3d1, 0 4px 4px -1px rgb(0 0 0 / 60%), 0 4px 6px 1px rgb(0 0 0 / 30%), 0 1px 2px 1px rgb(0 0 0 / 0%) inset, 0 18px 32px -2px rgb(255 255 255 / 10%) inset;
+    background-color: #E6EAEF;
+    background-image: linear-gradient(-45deg, #E6EAEF, #e4edf1);
+    color: #252730;
 }
 
-.ItemListTable tr .EditButton:hover {
-    color: blue;
-    background: #FDD720;
+.ItemListTable tr .ActionButton:hover {
+    box-shadow: 0 3px 0 0 #b7c3d1, 0 6px 4px -1px rgba(0, 0, 0, 0.3), 0 4px 16px rgba(0, 0, 0, 0.5), 0 1px 2px 1px rgba(0, 0, 0, 0) inset, 0 18px 32px -2px rgba(255, 255, 255, 0.14) inset;
 }
 
-.ItemListTable tr .CloseButton {
-    color: black;
-    border: 1px solid #B4A888;
+.ItemListTable tr .ActionButton:active {
+    box-shadow: 0 0px 0 0 #a8b6c7, 0 3px 0 0 rgba(0, 0, 0, 0), 0 4px 16px rgba(0, 0, 0, 0), 0 1px 2px 1px rgba(0, 0, 0, 0.5) inset, 0 -18px 32px -2px rgba(255, 255, 255, 0.1) inset;
+    transition: 0s;
+    color: #b7c3d1;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.3);
+}
+
+.ItemListTable tr .DisabledButton {
+    color: #CFCFC4;
+    border: 1px solid #F0EAD6;
     border-radius: 10px;
-    background: #FDB320;
+    background: #FDF5E6;
     padding: 5px 10px;
 }
