Added style to Detail pages

--- a/Views/Admin/UserDetail.cshtml
+++ b/Views/Admin/UserDetail.cshtml
@@ -1,6 +1,6 @@
 ﻿@model HeyHotel.Models.User;
 
-<table>
+<table class="ItemListTable">
     <caption>User Detail</caption>
     <tr><th>Parametr name</th><th>Value</th></tr>
     <tr>
